# YOLOV5N_CV

./: CMakeLists.txt
includes/auto_aim/: Camera.h  Detector.h
src/: Camera.cpp  Detector.cpp  main.cpp
